Fixed bug #40854 (imap_mail_compose() creates an invalid terminator for multipart e-mails).